@@ -16,5 +16,6 @@
     "spoiling_required": false,
     "freezing_required": false,
     "segmented_units_required": false,
-    "expansion_shaders_required": false
+    "expansion_shaders_required": false,
+    "rail-bridges": false
 }
