@@ -2,6 +2,8 @@
 lightning_settings-disable_flash=Disable Flash
 lightning_settings-disable_impact_light=Disable Impact Light
 lightning_settings-disable_lightning_bolt_graphic=Disable Lightning Bolt Graphics
+lightning_settings-disable_lightning_ground_impact_graphic=Disable Lightning Impact Explosion Graphics
+lightning_settings-disable_lightning_rod_charge_graphic=Disable Lightning Rod Charge Graphics
 lightning_settings-lightning_bolt_sound=Lightning Bolt Sound Enabled For
 lightning_settings-lightning_frequency_percentage=Lightning Frequency Percentage
 lightning_settings-lightning_damage_percentage=Lightning Damage Percentage
@@ -12,7 +14,9 @@ lightning_settings-lightning_energy_percentage=Lightning Energy Percentage
 [mod-setting-description]
 lightning_settings-disable_flash=Disable the bright flash that affects the wider map around the lightning strike area.
 lightning_settings-disable_impact_light=Disable the light in the immediate area of the impact point.
-lightning_settings-disable_lightning_bolt_graphic=Disable the lightning bolt graphics, but not the impact explosion. This includes the storm cloud and the white arcs to the ground.
+lightning_settings-disable_lightning_bolt_graphic=Disable the lightning bolt graphics, but not the impact explosion graphics. This includes the storm cloud and the white arcs to the ground.
+lightning_settings-disable_lightning_ground_impact_graphic=Disable the impact explosion graphics when the lightning bolt hits the ground or an entity that isn't a lightning rod (when it would do damage). Does hide ground electric arcs from all strikes; lightning rods, ground & entities.
+lightning_settings-disable_lightning_rod_charge_graphic=Disable the effect when the lightning bolt hits a lightning rod and transfers power into it. Does hide ground electric arcs from all strikes; lightning rods, ground & entities.
 lightning_settings-lightning_bolt_sound=Set when a lightning strike creates the vanilla Factorio sound effect, a loud cracking sound.
 lightning_settings-lightning_frequency_percentage=Change how often lightning happens compared to vanilla Factorio. 0% disables lightning entirely. Vanilla factorio has 1 strike per chunk every 10 seconds.
 lightning_settings-lightning_damage_percentage=Change how much damage lightning does to unprotected entities compared to vanilla Factorio. 0% disables all damage entirely. Vanilla factorio does 100 damage per strike.
