@@ -22,12 +22,26 @@ data:extend(
             order = "1002"
         },
         {
+            name = "lightning_settings-disable_lightning_ground_impact_graphic",
+            type = "bool-setting",
+            default_value = false,
+            setting_type = "startup",
+            order = "1003"
+        },
+        {
+            name = "lightning_settings-disable_lightning_rod_charge_graphic",
+            type = "bool-setting",
+            default_value = false,
+            setting_type = "startup",
+            order = "1004"
+        },
+        {
             name = "lightning_settings-lightning_bolt_sound",
             type = "string-setting",
             default_value = "all",
             allowed_values = { "all", "unprotected", "none" },
             setting_type = "startup",
-            order = "1003"
+            order = "1005"
         },
         {
             name = "lightning_settings-lightning_frequency_percentage",
